PCS BAckup 26Dec2023/Backup-Source/objects/Compliance_Summary__c.object
<CustomObject>
    <fields>
        <fullName>Awarded_Information__c</fullName>
        <label>Direct Awarded Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Backorder_SRx_Rx__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GCP Backorder SRx Rx</label>
        <referenceTo>Vision_GCP_Backorder_SRx_Rx__c</referenceTo>
        <relationshipLabel>Compliance Summary</relationshipLabel>
        <relationshipName>Compliance_Summary</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CTD_Direct_Awarded_Quantity__c</fullName>
        <label>CTD Direct Awarded Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CTD_Direct_Complaince__c</fullName>
        <formula>If(CTD_Direct_Awarded_Quantity__c &lt; 1,0,IF( AND( ISNULL(CTD_Direct_Quantity__c) ,ISNULL(CTD_Direct_Awarded_Quantity__c)) , 0,(CTD_Direct_Quantity__c/CTD_Direct_Awarded_Quantity__c)*100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CTD Direct Complaince</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CTD_Direct_Quantity__c</fullName>
        <label>CTD Direct Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CTD_Indirect_Awarded_Quantity__c</fullName>
        <label>CTD Indirect Awarded Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CTD_Indirect_Compliance__c</fullName>
        <formula>If(CTD_Indirect_Awarded_Quantity__c = 0,0,IF( AND( ISNULL(CTD_Indirect_Quantity__c) ,ISNULL(CTD_Indirect_Awarded_Quantity__c)) , 0,(CTD_Indirect_Quantity__c/CTD_Indirect_Awarded_Quantity__c)*100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CTD Indirect Compliance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CTD_Indirect_Quantity__c</fullName>
        <label>CTD Indirect Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CTD_Total_Awarded_Quantity__c</fullName>
        <label>CTD Total Awarded Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CTD_Total_Compliance__c</fullName>
        <formula>If(CTD_Total_Awarded_Quantity__c = 0,0,IF( AND( ISNULL(CTD_Total_Quantity__c) ,ISNULL(CTD_Total_Awarded_Quantity__c)) , 0,(CTD_Total_Quantity__c/CTD_Total_Awarded_Quantity__c)*100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CTD Total Compliance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CTD_Total_Quantity__c</fullName>
        <label>CTD Total Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Between_CTD__c</fullName>
        <label>Days Between CTD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Between_FTD__c</fullName>
        <label>Days Between FTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Between_MTD__c</fullName>
        <label>Days Between MTD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Between_QTD__c</fullName>
        <label>Days Between QTD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Direct_Awarded_Quantity_Monthly__c</fullName>
        <formula>Awarded_Information__c /12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Direct Awarded Quantity Monthly</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Direct_Price_Effective_Date__c</fullName>
        <label>Direct Price Effective Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direct_Supply_Effective_Date__c</fullName>
        <label>Direct Supply Effective Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FTD_Avg_Direct_Quantity__c</fullName>
        <label>FTD Avg Direct Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FTD_Avg_Indirect_Quantity__c</fullName>
        <label>FTD Avg Indirect Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FTD_Avg_Total_Quantity__c</fullName>
        <label>FTD Avg Total Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FTD_Direct_Awarded_Quantity__c</fullName>
        <label>FTD Direct Awarded Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FTD_Direct_Compliance__c</fullName>
        <formula>If(FTD_Direct_Awarded_Quantity__c &lt; 1,0,IF( AND( ISNULL(FTD_Direct_Quantity__c) ,ISNULL(FTD_Direct_Awarded_Quantity__c)) , 0,(FTD_Direct_Quantity__c/FTD_Direct_Awarded_Quantity__c)*100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FTD Direct Compliance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FTD_Direct_Quantity__c</fullName>
        <label>FTD Direct Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FTD_Indirect_Awarded_Quantity__c</fullName>
        <label>FTD Indirect Awarded Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FTD_Indirect_Complaince__c</fullName>
        <formula>If(FTD_Indirect_Awarded_Quantity__c = 0,0,IF( AND( ISNULL(FTD_Indirect_Quantity__c) ,ISNULL(FTD_Indirect_Awarded_Quantity__c)) , 0,(FTD_Indirect_Quantity__c/FTD_Indirect_Awarded_Quantity__c)*100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FTD Indirect Complaince</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FTD_Indirect_Quantity__c</fullName>
        <label>FTD Indirect Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FTD_Total_Awarded_Quantity__c</fullName>
        <label>FTD Total Awarded Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FTD_Total_Compliance__c</fullName>
        <formula>If(FTD_Total_Awarded_Quantity__c = 0,0,IF( AND( ISNULL(FTD_Total_Quantity__c) ,ISNULL(FTD_Total_Awarded_Quantity__c)) , 0,(FTD_Total_Quantity__c/FTD_Total_Awarded_Quantity__c)*100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FTD Total Compliance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FTD_Total_Quantity__c</fullName>
        <label>FTD Total Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GCP_Backorder_OTC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Backorder OTC</label>
        <referenceTo>Vision_GCP_Backorder_OTC__c</referenceTo>
        <relationshipLabel>Compliance Summary</relationshipLabel>
        <relationshipName>Compliance_Summary</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>General_Category__c</fullName>
        <label>General Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Indirect_Awarded_Information__c</fullName>
        <label>Indirect Awarded Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Indirect_Awarded_Quantity_Monthly__c</fullName>
        <formula>Indirect_Awarded_Information__c/12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Indirect Awarded Quantity Monthly</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Indirect_Price_Effective_Date__c</fullName>
        <label>Indirect Price Effective Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Indirect_Supply_Effective_Date__c</fullName>
        <label>Indirect Supply Effective Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Direct__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Direct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Indirect__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Indirect</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_New_Direct__c</fullName>
        <formula>IF(AND((M2_Quantity__c+M3_Quantity__c+M4_Quantity__c+M5_Quantity__c+M6_Quantity__c+M7_Quantity__c+M8_Quantity__c+M9_Quantity__c+M10_Quantity__c+M11_Quantity__c+M12_Quantity__c) = 0,M1_Quantity__c &gt; 0),TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is New Direct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_New_Indirect__c</fullName>
        <formula>IF(AND((M2_Indirect_Quantity__c+M3_Indirect_Quantity__c+M4_Indirect_Quantity__c+M5_Indirect_Quantity__c+M6_Indirect_Quantity__c+M7_Indirect_Quantity__c+M8_Indirect_Quantity__c+M9_Indirect_Quantity__c+M10_Indirect_Quantity__c+M11_Indirect_Quantity__c+M12_Indirect_Quantity__c) = 0,M1_Indirect_Quantity__c&gt; 0),TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is New Indirect</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_New_Total__c</fullName>
        <formula>IF(AND((M2_Total_Quantity__c+M3_Total_Quantity__c+M4_Total_Quantity__c+M5_Total_Quantity__c+M6_Total_Quantity__c+M7_Total_Quantity__c+M8_Total_Quantity__c+M9_Total_Quantity__c+M10_Total_Quantity__c+M11_Total_Quantity__c+M12_Total_Quantity__c) = 0,M1_Total_Quantity__c&gt; 0),TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is New Total</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_in_Openorder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is in Openorder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>M10_Direct_Qty_Compliance__c</fullName>
        <formula>If(Direct_Awarded_Quantity_Monthly__c= 0,0,IF( AND( ISNULL(M10_Quantity__c) ,ISNULL(Direct_Awarded_Quantity_Monthly__c)) , 0,(M10_Quantity__c/Direct_Awarded_Quantity_Monthly__c)*100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M10 Direct Qty Compliance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M10_Indirect_Qty_Compliance__c</fullName>
        <formula>If(Indirect_Awarded_Quantity_Monthly__c	= 0,0,IF( AND( ISNULL(M10_Indirect_Quantity__c) ,ISNULL(Indirect_Awarded_Quantity_Monthly__c)) , 0,(M10_Indirect_Quantity__c/Indirect_Awarded_Quantity_Monthly__c)*100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M10 Indirect Qty Compliance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M10_Indirect_Quantity__c</fullName>
        <label>M10 Indirect Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M10_Quantity__c</fullName>
        <label>M10 Direct Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M10_Total_Quantity__c</fullName>
        <formula>M10_Quantity__c + M10_Indirect_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M10 Total Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M11_Direct_Qty_Compliance__c</fullName>
        <formula>If(Direct_Awarded_Quantity_Monthly__c= 0,0,IF( AND( ISNULL(M11_Quantity__c) ,ISNULL(Direct_Awarded_Quantity_Monthly__c)) , 0,(M11_Quantity__c/Direct_Awarded_Quantity_Monthly__c)*100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M11 Direct Qty Compliance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M11_Indirect_Qty_Compliance__c</fullName>
        <formula>If(Indirect_Awarded_Quantity_Monthly__c = 0,0,IF( AND( ISNULL(M11_Indirect_Quantity__c) ,ISNULL(Indirect_Awarded_Quantity_Monthly__c)) , 0,(M11_Indirect_Quantity__c/Indirect_Awarded_Quantity_Monthly__c)*100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M11_Indirect_Qty_Compliance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M11_Indirect_Quantity__c</fullName>
        <label>M11 Indirect Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M11_Quantity__c</fullName>
        <label>M11 Direct Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M11_Total_Quantity__c</fullName>
        <formula>M11_Quantity__c + M11_Indirect_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M11 Total Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M12_Direct_Qty_Compliance__c</fullName>
        <formula>If(Direct_Awarded_Quantity_Monthly__c= 0,0,IF( AND( ISNULL(M12_Quantity__c) ,ISNULL(Direct_Awarded_Quantity_Monthly__c)) , 0,(M12_Quantity__c/Direct_Awarded_Quantity_Monthly__c)*100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M12 Direct Qty Compliance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M12_Indirect_Qty_Compliance__c</fullName>
        <formula>If(Indirect_Awarded_Quantity_Monthly__c = 0,0,IF( AND( ISNULL(M12_Indirect_Quantity__c) ,ISNULL(Indirect_Awarded_Quantity_Monthly__c)) , 0,(M12_Indirect_Quantity__c/Indirect_Awarded_Quantity_Monthly__c)*100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M12 Indirect Qty Compliance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M12_Indirect_Quantity__c</fullName>
        <label>M12_Indirect_Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M12_Quantity__c</fullName>
        <label>M12 Direct Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M12_Total_Quantity__c</fullName>
        <formula>M12_Quantity__c + M12_Indirect_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M12 Total Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M1_Direct_Avg_Qty_Compliance__c</fullName>
        <formula>If(M1_Quantity__c= 0,0,IF( AND( ISNULL(M1_Quantity__c) ,ISNULL(M1_Direct_Avg_Quantity__c)) , 0,(M1_Quantity__c/M1_Direct_Avg_Quantity__c)*100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M1 Direct Avg Qty Compliance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M1_Direct_Avg_Quantity__c</fullName>
        <formula>(IF(ISNULL(M2_Quantity__c ),0,M2_Quantity__c )+IF(ISNULL(M3_Quantity__c ),0,M3_Quantity__c ) + IF(ISNULL(M4_Quantity__c ),0,M4_Quantity__c ))/3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M1 Direct Avg Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M1_Indirect_Avg_Qty_Compliance__c</fullName>
        <formula>If(M1_Indirect_Quantity__c= 0,0,IF( AND( ISNULL(M1_Indirect_Quantity__c) ,ISNULL(M1_Indirect_Avg_Quantity__c )) , 0,(M1_Indirect_Quantity__c/M1_Indirect_Avg_Quantity__c )*100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M1 Indirect Avg Qty Compliance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M1_Indirect_Avg_Quantity__c</fullName>
        <formula>(IF(ISNULL(M2_Indirect_Quantity__c),0,M2_Indirect_Quantity__c)+IF(ISNULL(M3_Indirect_Quantity__c),0,M3_Indirect_Quantity__c) + IF(ISNULL(M4_Indirect_Quantity__c),0,M4_Indirect_Quantity__c))/3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M1 Indirect Avg Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M1_Total_Avg_Quantity__c</fullName>
        <formula>(IF(ISNULL(M2_Total_Quantity__c),0,M2_Total_Quantity__c)+IF(ISNULL(M3_Total_Quantity__c),0,M3_Total_Quantity__c) + IF(ISNULL(M4_Total_Quantity__c),0,M4_Total_Quantity__c))/3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M1 Total Avg Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M2_Direct_Avg_Qty_Compliance__c</fullName>
        <formula>If(M2_Quantity__c= 0,0,IF( AND( ISNULL(M2_Quantity__c) ,ISNULL(M2_Direct_Avg_Quantity__c)) , 0,(M2_Quantity__c/M2_Direct_Avg_Quantity__c)*100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M2 Direct Avg Qty Compliance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M2_Direct_Avg_Quantity__c</fullName>
        <formula>(IF(ISNULL(M3_Quantity__c ),0,M3_Quantity__c )+IF(ISNULL(M4_Quantity__c ),0,M4_Quantity__c ) + IF(ISNULL(M5_Quantity__c ),0,M5_Quantity__c ))/3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M2 Direct Avg Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M2_Indirect_Avg_Qty_Compliance__c</fullName>
        <formula>If(M2_Indirect_Quantity__c= 0,0,IF( AND( ISNULL(M2_Indirect_Quantity__c) ,ISNULL(M2_Indirect_Avg_Quantity__c )) , 0,(M2_Indirect_Quantity__c/M2_Indirect_Avg_Quantity__c )*100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M2 Indirect Avg Qty Compliance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M2_Indirect_Avg_Quantity__c</fullName>
        <formula>(IF(ISNULL(M3_Indirect_Quantity__c),0,M3_Indirect_Quantity__c)+IF(ISNULL(M4_Indirect_Quantity__c),0,M4_Indirect_Quantity__c) + IF(ISNULL(M5_Indirect_Quantity__c),0,M5_Indirect_Quantity__c))/3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M2 Indirect Avg Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M2_Total_Avg_Qty_Compliance__c</fullName>
        <formula>If(M2_Total_Quantity__c= 0,0,IF( AND( ISNULL(M2_Total_Quantity__c) ,ISNULL(M2_Total_Avg_Quantity__c)) , 0,(M2_Total_Quantity__c/M2_Total_Avg_Quantity__c)*100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M2 Total Avg Qty Compliance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M2_Total_Avg_Quantity__c</fullName>
        <formula>(IF(ISNULL(M5_Total_Quantity__c),0,M5_Total_Quantity__c)+IF(ISNULL(M3_Total_Quantity__c),0,M3_Total_Quantity__c) + IF(ISNULL(M4_Total_Quantity__c),0,M4_Total_Quantity__c))/3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M2 Total Avg Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M2_Total_Compliance__c</fullName>
        <formula>If(Total_Awarded_Information_Monthly__c &lt; 1,0,IF( AND(ISNULL(M2_Total_Quantity__c) ,ISNULL(Total_Awarded_Information_Monthly__c)) , 0,(M2_Total_Quantity__c/Total_Awarded_Information_Monthly__c)*100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M2 Total Compliance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M3_Direct_Avg_Qty_Compliance__c</fullName>
        <formula>If(M3_Quantity__c= 0,0,IF( AND( ISNULL(M3_Quantity__c) ,ISNULL(M3_Direct_Avg_Quantity__c)) , 0,(M3_Quantity__c/M3_Direct_Avg_Quantity__c)*100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M3 Direct Avg Qty Compliance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M3_Direct_Avg_Quantity__c</fullName>
        <formula>(IF(ISNULL(M4_Quantity__c ),0,M4_Quantity__c )+IF(ISNULL(M5_Quantity__c ),0,M5_Quantity__c ) + IF(ISNULL(M6_Quantity__c ),0,M6_Quantity__c ))/3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M3 Direct Avg Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M3_Indirect_Avg_Qty_Compliance__c</fullName>
        <formula>If(M3_Indirect_Quantity__c= 0,0,IF( AND( ISNULL(M3_Indirect_Quantity__c) ,ISNULL(M3_Indirect_Avg_Quantity__c )) , 0,(M3_Indirect_Quantity__c/M3_Indirect_Avg_Quantity__c )*100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M3 Indirect Avg Qty Compliance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M3_Indirect_Avg_Quantity__c</fullName>
        <formula>(IF(ISNULL(M4_Indirect_Quantity__c),0,M4_Indirect_Quantity__c)+IF(ISNULL(M5_Indirect_Quantity__c),0,M5_Indirect_Quantity__c) + IF(ISNULL(M6_Indirect_Quantity__c),0,M6_Indirect_Quantity__c))/3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M3 Indirect Avg Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M3_Total_Avg_Qty_Compliance__c</fullName>
        <formula>If(M3_Total_Quantity__c= 0,0,IF( AND( ISNULL(M3_Total_Quantity__c) ,ISNULL(M3_Total_Avg_Quantity__c)) , 0,(M3_Total_Quantity__c/M3_Total_Avg_Quantity__c)*100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M3 Total Avg Qty Compliance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M3_Total_Avg_Quantity__c</fullName>
        <formula>(IF(ISNULL(M5_Total_Quantity__c),0,M5_Total_Quantity__c)+IF(ISNULL(M6_Total_Quantity__c),0,M6_Total_Quantity__c) + IF(ISNULL(M4_Total_Quantity__c),0,M4_Total_Quantity__c))/3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M3 Total Avg Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M3_Total_Compliance__c</fullName>
        <formula>If(Total_Awarded_Information_Monthly__c= 0,0,IF( AND( ISNULL(M3_Total_Quantity__c) ,ISNULL(Total_Awarded_Information_Monthly__c)) , 0,(M3_Total_Quantity__c/Total_Awarded_Information_Monthly__c)*100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M3 Total Compliance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M4_Total_Avg_Qty_Compliance__c</fullName>
        <formula>If(M4_Total_Quantity__c= 0,0,IF( AND( ISNULL(M4_Total_Quantity__c) ,ISNULL(M4_Total_Avg_Quantity__c)) , 0,(M4_Total_Quantity__c/M4_Total_Avg_Quantity__c)*100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M4 Total Avg Qty Compliance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M4_Total_Compliance__c</fullName>
        <formula>If(Total_Awarded_Information_Monthly__c= 0,0,IF( AND( ISNULL(M4_Total_Quantity__c) ,ISNULL(Total_Awarded_Information_Monthly__c)) , 0,(M4_Total_Quantity__c/Total_Awarded_Information_Monthly__c)*100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M4 Total Compliance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MTD_Direct_Awarded_Quantity__c</fullName>
        <label>MTD Direct Awarded Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MTD_Direct_Complaince__c</fullName>
        <formula>If(MTD_Direct_Awarded_Quantity__c = 0,0,IF( AND( ISNULL(M1_Quantity__c) ,ISNULL(MTD_Direct_Awarded_Quantity__c)) , 0,(M1_Quantity__c/MTD_Direct_Awarded_Quantity__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MTD Direct Complaince</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MTD_Indirect_Awarded_Quantity__c</fullName>
        <label>MTD Indirect Awarded Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MTD_Indirect_Compliance__c</fullName>
        <formula>If(MTD_Indirect_Awarded_Quantity__c = 0,0,IF( AND( ISNULL(M1_Indirect_Quantity__c) ,ISNULL(MTD_Indirect_Awarded_Quantity__c)) , 0,(M1_Indirect_Quantity__c/MTD_Indirect_Awarded_Quantity__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MTD Indirect Compliance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MTD_Total_Awarded_Quantity__c</fullName>
        <label>MTD Total Awarded Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MTD_Total_Compliance__c</fullName>
        <formula>If(MTD_Total_Awarded_Quantity__c = 0,0,IF( AND( ISNULL(M1_Total_Quantity__c) ,ISNULL(MTD_Total_Awarded_Quantity__c)) , 0,(M1_Total_Quantity__c/MTD_Total_Awarded_Quantity__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MTD Total Compliance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Month10__c</fullName>
        <label>Month10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month11__c</fullName>
        <label>Month11</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month12__c</fullName>
        <label>Month12</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Effective_Date__c</fullName>
        <label>Price Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product_Position__c</fullName>
        <label>Product Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QTD_Avg_Direct_Quantity__c</fullName>
        <label>QTD Avg Direct Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QTD_Avg_Indirect_Quantity__c</fullName>
        <label>QTD Avg Indirect Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QTD_Avg_Total_Quantity__c</fullName>
        <label>QTD Avg TotalQuantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QTD_Direct_Awarded_Quantity__c</fullName>
        <label>QTD Direct Awarded Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QTD_Direct_Compliance__c</fullName>
        <formula>If(QTD_Direct_Awarded_Quantity__c = 0,0,IF( AND( ISNULL(QTD_Direct_Quantity__c) ,ISNULL(QTD_Direct_Awarded_Quantity__c)) , 0,(QTD_Direct_Quantity__c/QTD_Direct_Awarded_Quantity__c)*100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QTD Direct Compliance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QTD_Direct_Quantity__c</fullName>
        <label>QTD Direct Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QTD_Indirect_Awarded_Quantity__c</fullName>
        <label>QTD Indirect Awarded Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QTD_Indirect_Complaince__c</fullName>
        <formula>If(QTD_Indirect_Awarded_Quantity__c = 0,0,IF( AND( ISNULL(QTD_Indirect_Quantity__c) ,ISNULL(QTD_Indirect_Awarded_Quantity__c)) , 0,(QTD_Indirect_Quantity__c/QTD_Indirect_Awarded_Quantity__c)*100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QTD Indirect Complaince</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QTD_Indirect_Quantity__c</fullName>
        <label>QTD Indirect Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QTD_Total_Awarded_Quantity__c</fullName>
        <label>QTD Total Awarded Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QTD_Total_Complaince__c</fullName>
        <formula>If(QTD_Total_Awarded_Quantity__c = 0,0,IF( AND( ISNULL(QTD_Total_Quantity__c) ,ISNULL(QTD_Total_Awarded_Quantity__c)) , 0,(QTD_Total_Quantity__c/QTD_Total_Awarded_Quantity__c)*100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QTD Total Complaince</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QTD_Total_Quantity__c</fullName>
        <label>QTD Total Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Supply_Effective_Date__c</fullName>
        <label>Supply Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Awarded_Information_Monthly__c</fullName>
        <formula>Total_Awarded_Information__c /12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Awarded Quantity Monthly</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Awarded_Information__c</fullName>
        <formula>Indirect_Awarded_Information__c + Awarded_Information__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Awarded Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Phoenix_Contract__c</referenceTo>
        <relationshipLabel>Compliance Summary</relationshipLabel>
        <relationshipName>Compliance_Summary</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vision_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Compliance Summary</relationshipLabel>
        <relationshipName>Compliance_Summary</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>